<resources>
    <string name="pref_camera_storage_title">Storage</string>
    <string name="pref_camera_picturesize_entry_13mp">13M pixels</string>
    <string name="pref_camera_picturesize_entry_12_8mp">12.8M pixels</string>
    <string name="pref_camera_picturesize_entry_11_5mp">11.5M pixels</string>
    <string name="pref_camera_picturesize_entry_9mp">9M pixels</string>
    <string name="pref_camera_picturesize_entry_7mp">7M pixels</string>
    <string name="pref_camera_picturesize_entry_6_4mp">6.4M pixels</string>
    <string name="pref_camera_picturesize_entry_6mp">6M pixels</string>
    <string name="pref_camera_picturesize_entry_4mp">4M pixels</string>
    <string name="pref_camera_picturesize_entry_2_5mp">2.5M pixels</string>
    <string name="pref_camera_picturesize_entry_2_4mp">2.4M pixels</string>
    <string name="pref_camera_picturesize_entry_2_1mp">2.1M pixels</string>
    <string name="pref_camera_picturesize_entry_1_9mp">1.9M pixels</string>
    <string name="pref_camera_picturesize_entry_1_5mp">1.5M pixels</string>
    <string name="pref_camera_picturesize_entry_xga">XGA</string>
    <string name="pref_camera_picturesize_entry_svga">SVGA</string>
    <string name="pref_camera_picturesize_entry_wvga">WVGA</string>
    <string name="pref_camera_focusmode_entry_continuouspicture">Continuous picture</string>
    <string name="pref_camera_focusmode_entry_continuousvideo">Continuous video</string>
    <string name="pref_camera_focusmode_entry_extended">Extended</string>
    <string name="pref_camera_focusmode_entry_facedetect">Face detect</string>
    <string name="pref_camera_focusmode_entry_facepriority">Face priority</string>
    <string name="pref_camera_focusmode_entry_fixed">Fixed</string>
    <string name="pref_camera_focusmode_entry_portrait">Portrait</string>
    <string name="pref_camera_focusmode_entry_hyperfocal">Hyperfocal</string>
    <string name="pref_camera_scenemode_entry_nightportrait">Night portrait</string>
    <string name="pref_camera_scenemode_entry_nightindoor">Night indoor</string>
    <string name="pref_camera_scenemode_entry_supernight">Black night</string>
    <string name="pref_camera_scenemode_entry_duskdawn">Duskdawn</string>
    <string name="pref_camera_scenemode_entry_candlelight">Candlelight</string>
    <string name="pref_camera_scenemode_entry_fallcolor">Fallcolor</string>
    <string name="pref_camera_scenemode_entry_closeup">Closeup</string>
    <string name="pref_camera_scenemode_entry_landscape">Landscape</string>
    <string name="pref_camera_scenemode_entry_aqua">Aqua</string>
    <string name="pref_camera_scenemode_entry_sports">Sports</string>
    <string name="pref_camera_scenemode_entry_mood">Mood</string>
    <string name="pref_camera_scenemode_entry_fireworks">Fireworks</string>
    <string name="pref_camera_scenemode_entry_cine">Cine</string>
    <string name="pref_camera_scenemode_entry_oldfilm">Old film</string>
    <string name="pref_camera_scenemode_entry_beach">Beach</string>
    <string name="pref_camera_scenemode_entry_portrait">Portrait</string>
    <string name="pref_camera_scenemode_entry_snow">Snow</string>
    <string name="pref_camera_scenemode_entry_steadyphoto">Steadyphoto</string>
    <string name="pref_camera_scenemode_entry_theatre">Theatre</string>
    <string name="pref_camera_scenemode_entry_backlight">Backlight</string>
    <string name="pref_camera_scenemode_entry_backlightportrait">Backlight portrait</string>
    <string name="pref_camera_scenemode_entry_document">Document</string>
    <string name="pref_camera_scenemode_entry_barcode">Barcode</string>
    <string name="pref_camera_scenemode_entry_text">Text</string>
    <string name="pref_camera_scenemode_entry_beauty">Beauty</string>
    <string name="pref_camera_scenemode_entry_flowers">Flowers</string>
    <string name="pref_camera_scenemode_entry_whiteboard">Whiteboard</string>
    <string name="pref_camera_scenemode_entry_backgroundblur">Background blur</string>
    <string name="pref_camera_power_shutter_title">Power shutter</string>
    <string name="pref_camera_power_shutter_default">off</string>
    <string name="pref_camera_iso_title">ISO</string>
    <string name="pref_camera_iso_default">auto</string>
    <string name="pref_camera_iso_entry_auto">Auto</string>
    <string name="pref_camera_iso_entry_isodeblur">Auto (HJR)</string>
    <string name="pref_camera_iso_entry_isosports">Sports</string>
    <string name="pref_camera_iso_entry_isonight">Night</string>
    <string name="pref_camera_iso_entry_isomovie">Movie</string>
    <string name="pref_camera_iso_entry_iso6400">6400</string>
    <string name="pref_camera_iso_entry_iso3200">3200</string>
    <string name="pref_camera_iso_entry_iso1600">1600</string>
    <string name="pref_camera_iso_entry_iso1200">1200</string>
    <string name="pref_camera_iso_entry_iso1000">1000</string>
    <string name="pref_camera_iso_entry_iso800">800</string>
    <string name="pref_camera_iso_entry_iso400">400</string>
    <string name="pref_camera_iso_entry_iso200">200</string>
    <string name="pref_camera_iso_entry_iso100">100</string>
    <string name="pref_camera_iso_entry_iso50">50</string>
    <string name="pref_camera_jpeg_title">JPEG Quality</string>
    <string name="pref_camera_jpeg_default">90</string>
    <string name="pref_camera_jpeg_entry_super">Super</string>
    <string name="pref_camera_jpeg_entry_high">High</string>
    <string name="pref_camera_jpeg_entry_medium">Medium</string>
    <string name="pref_camera_jpeg_entry_low">Low</string>
    <string name="pref_camera_coloreffect_title">Color effect</string>
    <string name="pref_camera_coloreffect_default">none</string>
    <string name="pref_camera_coloreffect_entry_none">None</string>
    <string name="pref_camera_coloreffect_entry_mono">Mono</string>
    <string name="pref_camera_coloreffect_entry_sepia">Sepia</string>
    <string name="pref_camera_coloreffect_entry_negative">Negative</string>
    <string name="pref_camera_coloreffect_entry_solarize">Solarize</string>
    <string name="pref_camera_coloreffect_entry_posterize">Posterize</string>
    <string name="pref_camera_coloreffect_entry_aqua">Aqua</string>
    <string name="pref_camera_coloreffect_entry_emboss">Emboss</string>
    <string name="pref_camera_coloreffect_entry_sketch">Sketch</string>
    <string name="pref_camera_coloreffect_entry_neon">Neon</string>
    <string name="pref_camera_coloreffect_entry_pastel">Pastel</string>
    <string name="pref_camera_coloreffect_entry_mosaic">Mosaic</string>
    <string name="pref_camera_coloreffect_entry_redtint">Red tint</string>
    <string name="pref_camera_coloreffect_entry_bluetint">Blue tint</string>
    <string name="pref_camera_coloreffect_entry_greentint">Green tint</string>
    <string name="pref_camera_burst_title">Burst mode</string>
    <string name="pref_camera_burst_default">1</string>
    <string name="pref_camera_burst_entry_off">Off</string>
    <string name="pref_camera_burst_entry_5">5 shots</string>
    <string name="pref_camera_burst_entry_10">10 shots</string>
    <string name="pref_camera_burst_entry_15">15 shots</string>
    <string name="pref_camera_burst_entry_20">20 shots</string>
    <string name="pref_camera_focustime_title">Touch focus duration</string>
    <string name="pref_camera_focustime_summary">Select duration for touch focus</string>
    <string name="pref_camera_focustime_default">5000</string>
    <string name="pref_camera_focustime_entry_5">5s</string>
    <string name="pref_camera_focustime_entry_10">10s</string>
    <string name="pref_camera_focustime_entry_15">15s</string>
    <string name="pref_camera_focustime_entry_20">20s</string>
    <string name="pref_camera_focustime_entry_30">30s</string>
    <string name="pref_camera_focustime_entry_infinite">Infinite</string>
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera">"Can't connect to the camera."</string>
    <string name="camera_disabled">Camera has been disabled because of security policies.</string>
    <string name="camera_label">Camera</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="wait">Please wait…</string>
    <string name="no_storage">Insert an SD card before using the camera.</string>
    <string name="preparing_sd">Preparing SD card…</string>
    <string name="access_sd_fail">"Couldn't access SD card."</string>
    <string name="review_cancel">CANCEL</string>
    <string name="review_ok">DONE</string>
    <string name="time_lapse_title">Time lapse recording</string>
    <string name="pref_camera_id_title">Choose camera</string>
    <string name="pref_camera_id_default">0</string>
    <string name="pref_camera_id_entry_back">Back</string>
    <string name="pref_camera_id_entry_front">Front</string>
    <string name="pref_camera_recordlocation_title">Store location</string>
    <string name="pref_camera_recordlocation_default">none</string>
    <string name="setting_off">Off</string>
    <string name="setting_on">On</string>
    <string name="setting_off_value">off</string>
    <string name="setting_on_value">on</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_default">5</string>
    <string name="pref_video_quality_entry_1080p">HD 1080p</string>
    <string name="pref_video_quality_entry_720p">HD 720p</string>
    <string name="pref_video_quality_entry_480p">SD 480p</string>
    <string name="pref_video_quality_entry_high">High</string>
    <string name="pref_video_quality_entry_low">Low</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse</string>
    <string name="pref_video_time_lapse_frame_interval_default">0</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camcorder_settings_category">Camcorder settings</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_picturesize_entry_8mp">8M pixels</string>
    <string name="pref_camera_picturesize_entry_5mp">5M pixels</string>
    <string name="pref_camera_picturesize_entry_3mp">3M pixels</string>
    <string name="clear_effects">Clear effects</string>
    <string name="effect_silly_faces">SILLY FACES</string>
    <string name="effect_background">BACKGROUND</string>
    <string name="saturation">Saturation</string>
    <string name="vignette">Vignette</string>
    <string name="autofix">Auto-fix</string>
    <string name="crossprocess">Cross-process</string>
    <string name="documentary">Documentary</string>
    <string name="doodle">Doodle</string>
    <string name="duotone">Duo-tone</string>
    <string name="filllight">Fill Light</string>
    <string name="fisheye">Fisheye</string>
    <string name="grain">Film Grain</string>
    <string name="grayscale">B&amp;W</string>
    <string name="accessibility_black_and_white">Black and white</string>
    <string name="highlight">Highlights</string>
    <string name="lomoish">Lomo</string>
    <string name="negative">Negative</string>
    <string name="posterize">Posterize</string>
    <string name="sepia">Sepia</string>
    <string name="shadow">Shadows</string>
    <string name="temperature">Warmth</string>
    <string name="tint">Tint</string>
    <string name="doodle_tooltip">Draw on photo to doodle</string>
    <string name="set_image">Set picture as</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="share_panorama">Share panorama</string>
    <string name="slideshow">Slideshow</string>
    <string name="details">Details</string>
    <string name="show_on_map">Show on map</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="edit">Edit</string>
    <string name="crop_action">Crop</string>
    <string name="trim_action">Trim</string>
    <string name="Import">Import</string>
</resources>