<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_ptp_holo_light" android:id="@id/action_import" android:visible="false" android:title="@string/Import" android:showAsAction="always|withText" />
    <item android:icon="@drawable/ic_menu_share_holo_light" android:id="@id/action_share_panorama" android:visible="false" android:title="@string/share_panorama" android:showAsAction="ifRoom" android:actionProviderClass="android.widget.ShareActionProvider" />
    <item android:icon="@drawable/ic_menu_share_holo_light" android:id="@id/action_share" android:visible="false" android:title="@string/share" android:showAsAction="never" android:actionProviderClass="android.widget.ShareActionProvider" />
    <item android:icon="@drawable/ic_menu_trash_holo_light" android:id="@id/action_delete" android:visible="false" android:title="@string/delete" android:showAsAction="never" />
    <item android:icon="@drawable/ic_menu_slideshow_holo_light" android:id="@id/action_slideshow" android:title="@string/slideshow" android:showAsAction="never" />
    <item android:id="@id/action_edit" android:visible="false" android:title="@string/edit" android:showAsAction="never" />
    <item android:id="@id/action_rotate_ccw" android:title="@string/rotate_left" android:showAsAction="never" />
    <item android:id="@id/action_rotate_cw" android:title="@string/rotate_right" android:showAsAction="never" />
    <item android:id="@id/action_crop" android:title="@string/crop_action" android:showAsAction="never" />
    <item android:id="@id/action_trim" android:title="@string/trim_action" android:showAsAction="never" />
    <item android:id="@id/action_setas" android:title="@string/set_image" android:showAsAction="never" />
    <item android:id="@id/action_details" android:title="@string/details" android:showAsAction="never" />
    <item android:id="@id/action_show_on_map" android:title="@string/show_on_map" android:showAsAction="never" />
</menu>