<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/EffectsContainer"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.gallery3d.photoeditor.actions.ColorTemperatureAction style="@style/Effect">
        <ImageView android:src="@drawable/photoeditor_effect_temperature" style="@style/EffectIcon" />
        <TextView android:id="@id/effect_label" android:text="@string/temperature" style="@style/EffectLabel" />
    </com.android.gallery3d.photoeditor.actions.ColorTemperatureAction>
    <com.android.gallery3d.photoeditor.actions.SaturationAction style="@style/Effect">
        <ImageView android:src="@drawable/photoeditor_effect_saturation" style="@style/EffectIcon" />
        <TextView android:id="@id/effect_label" android:text="@string/saturation" style="@style/EffectLabel" />
    </com.android.gallery3d.photoeditor.actions.SaturationAction>
    <com.android.gallery3d.photoeditor.actions.GrayscaleAction style="@style/Effect">
        <ImageView android:src="@drawable/photoeditor_effect_grayscale" style="@style/EffectIcon" />
        <TextView android:id="@id/effect_label" android:text="@string/grayscale" android:contentDescription="@string/accessibility_black_and_white" style="@style/EffectLabel" />
    </com.android.gallery3d.photoeditor.actions.GrayscaleAction>
    <com.android.gallery3d.photoeditor.actions.SepiaAction style="@style/Effect">
        <ImageView android:src="@drawable/photoeditor_effect_sepia" style="@style/EffectIcon" />
        <TextView android:id="@id/effect_label" android:text="@string/sepia" style="@style/EffectLabel" />
    </com.android.gallery3d.photoeditor.actions.SepiaAction>
    <com.android.gallery3d.photoeditor.actions.NegativeAction style="@style/Effect">
        <ImageView android:src="@drawable/photoeditor_effect_negative" style="@style/EffectIcon" />
        <TextView android:id="@id/effect_label" android:text="@string/negative" style="@style/EffectLabel" />
    </com.android.gallery3d.photoeditor.actions.NegativeAction>
    <com.android.gallery3d.photoeditor.actions.TintAction style="@style/Effect">
        <ImageView android:src="@drawable/photoeditor_effect_tint" style="@style/EffectIcon" />
        <TextView android:id="@id/effect_label" android:text="@string/tint" style="@style/EffectLabel" />
    </com.android.gallery3d.photoeditor.actions.TintAction>
    <com.android.gallery3d.photoeditor.actions.DuotoneAction style="@style/Effect">
        <ImageView android:src="@drawable/photoeditor_effect_duotone" style="@style/EffectIcon" />
        <TextView android:id="@id/effect_label" android:text="@string/duotone" style="@style/EffectLabel" />
    </com.android.gallery3d.photoeditor.actions.DuotoneAction>
    <com.android.gallery3d.photoeditor.actions.DoodleAction android:tag="@string/doodle_tooltip" style="@style/Effect">
        <ImageView android:src="@drawable/photoeditor_effect_doodle" style="@style/EffectIcon" />
        <TextView android:id="@id/effect_label" android:text="@string/doodle" style="@style/EffectLabel" />
    </com.android.gallery3d.photoeditor.actions.DoodleAction>
</LinearLayout>